wwwroot/css/app.css
@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');

@font-face {
    font-family: Yellow Tail;
    src: url("fonts/Yellowtail-Regular.ttf")
}

html, body {
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    background-image: url("images/gradient.jpg");
    background-repeat: no-repeat;
    background-size: cover;
}

a, .btn-link {
    color: #fff;
}

.btn-primary {
    color: #fff;
    background-color: #1b6ec2;
    border-color: #1861ac;
}

app {
    position: relative;
    display: flex;
    flex-direction: column;
}

#dark-background {
    background-color: #424c56;
}

#dark-text {
    color: #fff;
}

.top-row {
    height: 3.55rem;
    display: flex;
    align-items: center;
}

.main {
    flex: 1;
}

    .main .top-row {
        background-color: #8882;
        box-shadow: 5px 5px 8px black;
    }

        .main .top-row > a, .main .top-row .btn-link {
            white-space: nowrap;
            margin-left: 1.5rem;
        }

        .main .top-row a:first-child {
            overflow: hidden;
            text-overflow: ellipsis;
        }

    .main .content {
        color: #fff;
        position: absolute;
        top: 60px;
        left: 240px;
        right: 0;
        bottom: 0;
        overflow: auto;
    }

.sidebar {
    background-color: #8882;
    box-shadow: 5px 5px 8px black;
}

    .sidebar .top-row {
   
    }

    .sidebar .navbar-brand {
        font-family: 'Yellow Tail';
        font-size: 1.5rem;
    }

    .sidebar .oi {
        width: 2rem;
        font-size: 1.1rem;
        vertical-align: text-top;
        top: -2px;
    }

    .sidebar .nav-item {
        font-size: 0.9rem;
        padding-bottom: 0.5rem;
    }

        .sidebar .nav-item:first-of-type {
            padding-top: 1rem;
        }

        .sidebar .nav-item:last-of-type {
            padding-bottom: 1rem;
        }

        .sidebar .nav-item a {
            color: #d7d7d7;
            border-radius: 4px;
            height: 3rem;
            display: flex;
            align-items: center;
            line-height: 3rem;
        }

            .sidebar .nav-item a.active {
                background-color: rgba(255,255,255,0.15);
                color: white;
            }

            .sidebar .nav-item a:hover {
                background-color: rgba(255,255,255,0.05);
                color: white;
            }

.content {
    padding-top: 1.1rem;
}

.navbar-toggler {
    background-color: rgba(255, 255, 255, 0.1);
}

.valid.modified:not([type=checkbox]) {
    outline: 1px solid #26b050;
}

.invalid {
    outline: 1px solid red;
}

.validation-message {
    color: red;
}

#blazor-error-ui {
    background: lightyellow;
    bottom: 0;
    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
    display: none;
    left: 0;
    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
    position: fixed;
    width: 100%;
    z-index: 1000;
}

#blazor-error-ui .dismiss {
    cursor: pointer;
    position: absolute;
    right: 0.75rem;
    top: 0.5rem;
}

@media (max-width: 767.98px) {

    .main .content {
        position:relative;
        margin: auto;
        top: auto;
        left: auto;
        right: auto;
        bottom: auto;
    }

    .main .top-row:not(.auth) {
        display: none;
    }

    .main .top-row.auth {
        justify-content: space-between;
    }

    .main .top-row a, .main .top-row .btn-link {
        margin-left: 0;
    }
}

@media (min-width: 768px) {
    app {
        flex-direction: row;
    }

    .sidebar {
        width: 250px;
        height: 100vh;
        position: sticky;
        top: 0;
    }

    .main .top-row {
        position: sticky;
        top: 0;
    }

    .main > div {
        padding-left: 2rem !important;
        padding-right: 1.5rem !important;
    }

    .navbar-toggler {
        display: none;
    }

    .sidebar .collapse {
        /* Never collapse the sidebar for wide screens */
        display: block;
    }
}

.webgl-content * {
    border: 0;
    margin: 0;
    padding: 0
}

.webgl-content {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

    .webgl-content .logo, .progress {
        position: absolute;
        left: 50%;
        top: 50%;
        -webkit-transform: translate(-50%, -50%);
        transform: translate(-50%, -50%);
    }

    .webgl-content .logo {
        background: url('progressLogo.Light.png') no-repeat center / contain;
        width: 154px;
        height: 130px;
    }

    .webgl-content .progress {
        height: 18px;
        width: 141px;
        margin-top: 90px;
    }

        .webgl-content .progress .empty {
            background: url('progressEmpty.Light.png') no-repeat right / cover;
            float: right;
            width: 100%;
            height: 100%;
            display: inline-block;
        }

        .webgl-content .progress .full {
            background: url('progressFull.Light.png') no-repeat left / cover;
            float: left;
            width: 0%;
            height: 100%;
            display: inline-block;
        }

    .webgl-content .logo.Dark {
        background-image: url('progressLogo.Dark.png');
    }

    .webgl-content .progress.Dark .empty {
        background-image: url('progressEmpty.Dark.png');
    }

    .webgl-content .progress.Dark .full {
        background-image: url('progressFull.Dark.png');
    }

    .webgl-content .footer {
        margin-top: 5px;
        height: 38px;
        line-height: 38px;
        font-family: Helvetica, Verdana, Arial, sans-serif;
        font-size: 18px;
    }

        .webgl-content .footer .webgl-logo, .title, .fullscreen {
            height: 100%;
            display: inline-block;
            background: transparent center no-repeat;
        }

        .webgl-content .footer .webgl-logo {
            background-image: url('webgl-logo.png');
            width: 204px;
            float: left;
        }

        .webgl-content .footer .title {
            margin-right: 10px;
            float: right;
        }

        .webgl-content .footer .fullscreen {
            background-image: url('fullscreen.png');
            width: 38px;
            float: right;
        }

